fixed blackbackground on safari

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ html *
 
 body
 {
-    background-color: black;
     background-image: url('assets/background.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
